# squadcast-analyze

./: .env.example  .gitignore  README.md  pyproject.toml
src/squadcast_analyze/: analyzer.py  auth.py  cli.py  client.py  config.py  init.py  io_utils.py  main.py
src/squadcast_analyze.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
